--- a/app/src/main/res/layout/activity_login_option.xml
+++ b/app/src/main/res/layout/activity_login_option.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cranberryRed"
-    tools:context=".LoginOptionActivity">
+    tools:context=".activities.LoginOptionActivity">
 
     <LinearLayout
         android:id="@+id/ll"
