--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,38 +5,57 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ProfileFragment">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/iv_accProfilePic"
+        android:layout_width="@dimen/dp_75"
+        android:layout_height="@dimen/dp_75"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/dp_20" />
+
+    <TextView
+        android:id="@+id/tv_userName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:fontFamily="sans-serif"
+        android:text="Mukesh"
+        android:textSize="@dimen/dp_20"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_userName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mukesh" />
+    <TextView
+        android:id="@+id/tv_emailId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_userName"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:text="email" />
 
-        <TextView
-            android:id="@+id/tv_emailId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_userName"
-            android:text="email" />
-
-        <TextView
-            android:id="@+id/tv_Logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_emailId"
-            android:drawableRight="@drawable/ic_arrow_right"
-            android:text="@string/logout"
-            android:textColor="#FF0000" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/tv_Logout" />
+    <View
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/iv_accProfilePic"
+        android:background="@android:color/darker_gray" />
 
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_Logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/line1"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:drawableRight="@drawable/ic_arrow_right"
+        android:text="@string/logout"
+        android:textColor="#FF0000" />
+
 
 </RelativeLayout>
