--- a/app/src/main/res/layout/rc_listofrestaurant_design.xml
+++ b/app/src/main/res/layout/rc_listofrestaurant_design.xml
@@ -37,6 +37,8 @@
             <TextView
                 android:id="@+id/tv_restaurantNameRclist"
                 android:layout_width="wrap_content"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_5"
                 android:text="Restaurant Name" />
@@ -45,9 +47,10 @@
                 android:id="@+id/tv_restaurantCuisinesRclist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_restaurantCostfor2Rclist"
+                android:layout_below="@id/tv_restaurantNameRclist"
                 android:layout_margin="@dimen/dp_5"
-                android:layout_marginEnd="@dimen/dp_250"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/tv_restaurantCostfor2Rclist"
                 android:text="Restaurant HighLights" />
 
             <TextView
