--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,8 +25,8 @@
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
 
         <item name="searchIcon">@drawable/ic_search</item>
-        <item name="queryBackground">@color/white</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="queryBackground">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="hintTextColor">@color/white</item>
         <item name="searchHintIcon">@null</item>
         <item name="android:background">@color/white</item>
