--- a/app/src/main/res/layout/rc_listofrestaurant_design.xml
+++ b/app/src/main/res/layout/rc_listofrestaurant_design.xml
@@ -17,6 +17,7 @@
         <ImageView
             android:id="@+id/iv_restaurantImageRclist"
             android:layout_width="match_parent"
+            android:src="@drawable/imagenotavailable"
             android:layout_height="@dimen/dp_150"
             android:scaleType="fitXY" />
 
