--- a/app/src/main/res/layout/activity_login_option.xml
+++ b/app/src/main/res/layout/activity_login_option.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cranberryRed"
     tools:context=".activities.LoginOptionActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/splashscreen"/>
 
     <LinearLayout
         android:id="@+id/ll"
