--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,10 @@
     android:background="@color/cranberryRed"
     tools:context=".activities.SplashActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:fontFamily="cursive"
-        android:text="Yami \n    Eats"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_50" />
+        android:src="@drawable/splashscreen"/>
 
 </RelativeLayout>
