--- a/app/src/main/res/layout/fragment_view_pager2.xml
+++ b/app/src/main/res/layout/fragment_view_pager2.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_25"
-        android:text="Our Partners will Race to Deliver our Food"
+        android:text="Our Partners will Race to Deliver your Food"
         android:textSize="@dimen/sp_30"
         android:padding="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="parent"
